--- a/README.rdoc
+++ b/README.rdoc
@@ -1,2 +1,2 @@
-The use for this compiler should be stage2 *a_text_file* *anoutputfile*.
+The use for this compiler should be stage2 atextfile.txt outputfile.txt
 
